Fix KaTeX overflow for small screens

--- a/static/main.css
+++ b/static/main.css
@@ -162,6 +162,10 @@ sup {
   }
 }
 
+.katex-display {
+  overflow-x: scroll;
+}
+
 /* Background */
 
 #background-canvas {
